changes/5.11-rc7/2040a6bf90b530165cc86dfa879d5daa3b85f220
m68k: mmu_context: Fix Sun-3 build

When building for Sun-3 (e.g. sun3_defconfig):

    In file included from ./arch/m68k/include/asm/mmu_context.h:312,
		     from arch/m68k/sun3/mmu_emu.c:28:
    ./include/asm-generic/mmu_context.h:46:20: error: redefinition of ‘destroy_context’
       46 | static inline void destroy_context(struct mm_struct *mm)
	  |                    ^~~~~~~~~~~~~~~
    In file included from arch/m68k/sun3/mmu_emu.c:28:
    ./arch/m68k/include/asm/mmu_context.h:192:20: note: previous definition of ‘destroy_context’ was here
      192 | static inline void destroy_context(struct mm_struct *mm)
	  |                    ^~~~~~~~~~~~~~~

Fix this by marking destroy_context implemented by arch-specific code.

Fixes: cb41155766b05935 ("m68k: use asm-generic/mmu_context.h for no-op implementations")
Reported-by: noreply@ellerman.id.au
Signed-off-by: Geert Uytterhoeven <geert+renesas@glider.be>
Signed-off-by: Arnd Bergmann <arnd@arndb.de>

